--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
   "dependencies": {
     "@azure/msal-browser": "^2.0.0",
     "@azure/msal-react": "^1.0.0",
+    "axios": "^0.21.1",
     "react": "^17.0.0",
-    "axios": "^0.21.1"
+    "react-msal-auth": "^1.0.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "typescript": "^4.0.0"
   }
 }
